fixed z-index bug on diagonal pic-break div

--- a/_sass/blog/_default.scss
+++ b/_sass/blog/_default.scss
@@ -114,7 +114,7 @@
   &__navigation {
     width: 100%;
     position: absolute;
-    z-index: 1;
+    z-index: 2;
     &.stuck {
       position: fixed;
       top: 60px;
